2007-04-23 Ian Rutt
 * Merged changes from RELEASE_1_0_0_ANOMALY into RELEASE_1_0_0_BRANCH

2007-04-13 Ian Rutt
 * Added integer parameter to glimmer_version to enable run-time testing of
   glimmer version number (1.2.5 -> 10205, for example)

2007-04-04 Ian Rutt
 * Plumbed anomaly coupling into Glint

2007-04-02 Ian Rutt
 * Further work on anomaly coupling. Added to build.
 * Fixed bugs - tested and seems to work

2007-03-27 Ian Rutt
 * Fixed bug with make_restarts.py so that output line-length is kept
   reasonable - build with gfortran fails otherwise.
 * Branched to RELEASE_1_0_0_ANOMALY
 * Began assembling code for anomaly coupling - added glimmer_anomcouple.F90
	
2007-03-16 Ian Rutt
 * Fixed problem specifying sigma levels - all three methods work now

2007-02-23 Ian Rutt
 * configure.in: bump version to 1.0.1
 * NEWS: update
	
2007-02-23 Ian Rutt
 * configure.in: bump version to 1.0.0
 * NEWS: update
	
2007-02-23 Ian Rutt
 * Minor change to build (restarts) in preparation for version 1.0.0 release

2007-02-07 Ian Rutt
 * Fixed bug with start time consistency check... (doh)
 * Clarified comments about log-levels

2006-12-06 Ian Rutt
 * Added extra check on glint start time consistency (thanks to Oli).

2006-12-05 Magnus Hagdorn
 * src/fortran/eismint3_forcing.F90: fixed minor bug where line was too long

2006-11-07 Ian Rutt
 * Fixed IBM build problem reported by Oli.

2006-10-31 Ian Rutt
 * Fixed minor bug in EISMINT-3-GL output

2006-10-27 Ian Rutt
 * Merged RESTART_ON_DEMAND branch into main trunk. Builds fine.

2006-10-25 Ian Rutt
 * Fixed problem with hotstart variables - now works when hotstart
 variables are specified in several var.def files.
 * Better implementation of EISMINT-3-GL forcing - copes with temperature
 perturbation and hotstarts better now.

2006-10-23 Ian Rutt
 * Major enhancements to GLINT API, plus one or two bug
 corrections. Time-step coordination and averaging is now handled in a
 much-improved way.

2006-10-13 Ian Rutt