@@ -1,3 +1,8 @@
+2007-04-27 Ian Rutt
+ * Fixed bugs in anomaly coupling, and tested
+ * Added ability to specify whether temperatures in glint_example climate
+   are in Kelvin or not.
+
 2007-04-23 Ian Rutt
  * Merged changes from RELEASE_1_0_0_ANOMALY into RELEASE_1_0_0_BRANCH
 
